# CppRaspberry

./: .gitignore  CMakeLists-pico.txt  CMakeLists-zero2w.txt  CMakeLists.txt  CppRaspberry.cmake  NOTICE  README.md
.github/: copilot-instructions.md
components/: components.txt
components/7segment/: 7segment.cmake
components/button/: button.cmake
components/button/include/components/: button.hpp  local-button.hpp
components/button/src/components/: button.cpp
components/led/: led.cmake
components/led/include/components/: led.hpp  local-led.hpp
devices/: devices.txt
devices/lcd2x16/: lcd2x16.cmake
devices/lcd2x16/include/devices/: lcd2x16.hpp
devices/lcd2x16/src/devices/: lcd2x16.cpp
devices/max7219/: max7219.cmake
devices/max7219/include/devices/: local-max7219.hpp  max7219.hpp  remote-max7219.hpp
devices/mcp23s17/: mcp23s17.cmake
devices/sh1122/: sh1122.cmake
devices/ssd1305/: ssd1305.cmake
devices/ssd130x/: ssd130x.cmake
devices/st7789/: st7789.cmake
devices/tlc59711/: tlc59711.cmake
i2c/: i2c.cmake
i2c/include/interfaces/: i2c.hpp
i2c/include/protocols/: i2c-device-handler.hpp  i2c-protocol-driver.hpp  i2c_protocol.hpp  i2c_protocol_driver.hpp
i2c/src/protocols/: i2c-protocol-driver.cpp  i2c_protocol_driver.cpp
include/: raspberry-pi.hpp  raspberry_pi.hpp
include/components/: button.hpp  led.hpp  named-component.hpp  stateful-component.hpp
include/devices/: button.hpp  lcd2x16.hpp  led.hpp  max7219.hpp  tlc59711.hpp
include/interfaces/: gpio.hpp  i2c.hpp  spi.hpp
include/pico/: pico.hpp
include/pico/interfaces/: pico_i2c.hpp  pico_spi.hpp
include/protocols/: i2c_protocol.hpp  i2c_protocol_driver.hpp  messages.hpp  protocol-driver.hpp
include/util/: message-queue.hpp  named-component.hpp  verbose-component.hpp
include/zero2w/: zero2w.hpp
include/zero2w/interfaces/: zero2w_i2c.hpp  zero2w_spi.hpp
interfaces/spi/: spi.cmake
lcd2x16/: lcd2x16.cmake
lcd2x16/include/devices/: lcd2x16.hpp
lcd2x16/src/devices/: lcd2x16.cpp
max7219/: max7219.cmake
max7219/include/devices/: local-max7219.hpp  max7219.hpp  remote-max7219.hpp
max7219/include/protocols/: max7219-handler.hpp  max7219-messages.hpp
max7219/include/util/: max7219-state.hpp
max7219/src/devices/: remote-max7219.cpp
max7219/src/util/: max7219-state.cpp
pico/: pico.cmake
pico/i2c/: i2c.cmake
pico/include/: pico.hpp
pico/spi/: spi.cmake
pico/src/: pico.cpp
project-templates/: CMakeLists.txt
project-templates/pico/: CMakeLists.txt
project-templates/zero2w/: CMakeLists.txt
spi/: spi.cmake
spi/include/devices/: spi-device.hpp  spi_device.hpp
spi/include/interfaces/: spi.hpp
src/: i2c-test.cpp  pico-test.cpp  pico.cpp  raspberry-pi.cpp  raspberry_pi.cpp  zero2w.cpp
src/devices/: lcd2x16.cpp
src/interfaces/: pico_i2c.cpp  pico_spi.cpp  zero2w_i2c.cpp
src/protocols/: i2c_protocol_driver.cpp
tlc59711/include/devices/: tlc59711.hpp
zero2w/: zero2w.cmake
zero2w/i2c/: i2c.cmake
zero2w/include/: zero2w.hpp
zero2w/spi/: spi.cmake
zero2w/src/: zero2w.cpp
zero2w/src/util/: verbose-component.cpp
(+38 files in other folders)
